k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-website-service
spec:
  selector:
    app: school-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
